# ChangeLog for x11-themes/fvwm-crystal
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/fvwm-crystal/ChangeLog,v 1.62 2011/09/27 13:52:26 ssuominen Exp $

  27 Sep 2011; Samuli Suominen <ssuominen@gentoo.org>
  fvwm-crystal-3.0.6-r1.ebuild:
  Fix missing USE="png" depend for x11-wm/fvwm wrt #332117 by Jonathan Geisler

  19 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org>
  fvwm-crystal-3.0.5-r1.ebuild, fvwm-crystal-3.0.6-r1.ebuild:
  Fix HOMEPAGE wrt #379353 by Jesús Guerrero <i92guboj@gentoo.org>

  28 Sep 2009; Víctor Ostorga <vostorga@gentoo.org>
  fvwm-crystal-3.0.6-r1.ebuild:
  Adding RDEPEND on x11-apps/xwd and media-gfx/imagemagick[png] , bug 282137

*fvwm-crystal-3.0.6-r1 (26 Jun 2009)

  26 Jun 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -fvwm-crystal-3.0.6.ebuild, +fvwm-crystal-3.0.6-r1.ebuild,
  +files/fvwm-crystal.apps.patch:
  Misc fixes (bug 254360, bug 71033 and bug 272945), ebuild and patch from
  Naohiro Aota (naota@elisp.net)

*fvwm-crystal-3.0.6 (07 Dec 2008)

  07 Dec 2008; Patrick Lauer <patrick@gentoo.org>
  +fvwm-crystal-3.0.6.ebuild:
  Bump to 3.0.6, closes #250183

  02 Nov 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing lucass as a maintainer since he was retired.

  23 Apr 2008; Lukasz Strzygowski <lucass@gentoo.org>
  -fvwm-crystal-3.0.4.ebuild, -fvwm-crystal-3.0.5.ebuild:
  Dropped old versions.

  23 Apr 2008; Markus Meier <maekke@gentoo.org>
  fvwm-crystal-3.0.5-r1.ebuild:
  amd64 stable, bug #212025

  13 Mar 2008; Lukasz Strzygowski <lucass@gentoo.org>
  fvwm-crystal-3.0.5-r1.ebuild:
  Fixed env vars in fvwm-crystal.apps.

  11 Mar 2008; Raúl Porcel <armin76@gentoo.org>
  fvwm-crystal-3.0.5-r1.ebuild:
  sparc stable wrt #212025

  04 Mar 2008; Brent Baude <ranger@gentoo.org> fvwm-crystal-3.0.5-r1.ebuild:
  stable ppc64, bug 212025

  03 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  fvwm-crystal-3.0.5-r1.ebuild: