@@ -7,17 +7,17 @@ DIST fvwm-crystal-3.0.5-envfix.patch.bz2 22680 RMD160 935dd1eecc5707b405618ab588
 DIST fvwm-crystal-3.0.5.tar.gz 3805580 RMD160 bf34e8fa0e96b750a372ce81d761703eec36cf11 SHA1 be22bdbfab5135dc427d26390791e0315ed7435f SHA256 bcbbfa1fe68fd4ea4168c4a8042a2696236a020da9ab11b922dfa4066e0c9baf
 DIST fvwm-crystal-3.0.6.tar.gz 7857363 RMD160 38ea8475750f9f8f315d9357bf8ddd6daf9876ed SHA1 965e521f64b8a89994f5afee25c8b1c88239bff0 SHA256 9a325f07929e2b4ab2cc8f3e82eab0219d97dd9111c103309711dab324f17fe9
 EBUILD fvwm-crystal-3.0.5-r1.ebuild 1736 RMD160 2d4bfd3a3c5d481e0714948e5e0effecc01f91f8 SHA1 bc902ca0f3813844502f83944c9437386d50aeba SHA256 2ef710dff776fc2166ef937e7e0568ff0b74a694a5acdcdb0e08facffe7355f0
-EBUILD fvwm-crystal-3.0.6-r1.ebuild 1622 RMD160 e72d69063703054b19c7da5fb9603faef51b3364 SHA1 31b6bec25070e6550513cd9909a14882769fe208 SHA256 d038eea5948994dc5f2ccd77229c001997de8e946918277af8b29a266be57953
-MISC ChangeLog 10237 RMD160 b29dbe47065928f08759d1c24cca609696dcb962 SHA1 1c1f2b9a0adb8cad1787dd3cb11f7f6741d01133 SHA256 b8abf7a3668f8e356ac16f8542b140b78724b820a2c7a7d0cadca0141dfe1da4
+EBUILD fvwm-crystal-3.0.6-r1.ebuild 1600 RMD160 1580a2560b7e846d43c9687aab02b052b549c2f9 SHA1 269303c6feb8ad6c64d84a2c48fd87a8cfc1f52c SHA256 b04a2fc0ad799a8fea465da3c618c5789fb7b84c0c5e0279db04a5097dbddc36
+MISC ChangeLog 10355 RMD160 8766aaa43e0bdc10231e2bd46b3f74016380bc6a SHA1 344e4faab6fddaae71495456dec4e7bb1097d5a8 SHA256 ba38ace1e35aef9bc9b06faf593135a49198a603cff173b5030f6444272970b6
 MISC metadata.xml 874 RMD160 3594678cd37da403f22dbc9ddc11aba9636fdf9a SHA1 899d42749bdc3aa5e90874872c597473d3d10e9a SHA256 89c3b3c4197ca01987650523b0b0e0f64af062ab950a40725d74efc7aafc0d16
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJOgdVEAAoJEEdUh39IaPFN76EH/03q7M1JheAHH33r7zDRESUh
-rn/Tvlxx24Rvv+9uGb+gP1EC/9AQuTWtbdv2F0hbeFwQt+6ToPowsL3fGapnmilN
-prYv1lo63GpypzqZ68qIs9pZPzC/jhcifpwMWiWyovlO5l+NfrQQu7XOjl1osGhC
-rNlos1rejFRL8a3+sztGN2VZz0evVt8XaZ/V+Re9nQOqNwC5lDnXoe/B57XvFwbt
-RoVYtXonQpjBFSOX3HtPueWP4zQEzfw1z6ibhjn1uMdbFviJQAze48EgdRrF4s2x
-tcH+A9zRyhdWI+s0USVrvhkQvI/VoXfjeC0qs/T/cGFOkneznNxIergIVs/5+os=
-=DXDA
+iQEcBAEBAgAGBQJOvVYcAAoJEEdUh39IaPFNsKsH/3f/auFswlSfiP6/V1zinAtD
+xWBuvI4OWxyjUZjVTOoItkSgx2vP7OlV29NQ/wy3/ZfdOKhoTNAoIK3pD56wMxKn
+lnosQleZKnrOib/sbto59J36MA+gbE8xJH+QYREIjOyGW4pQskJxJyhfafeg3kch
+5EUd5w2eJvrDuwzB6c0XN1V1P0N+0uJd2TSBajoo3cUoZSb/PFqTEc6ewV+72IFu
+cz+UT1eCLnt1U+IzclV3CBAUw6mhtSVW9ZRHlz9yd90cuYYGgJ/8RjD8rIhZs9Cb
+rs0ZncEWUeUD5BhzdbzvMO3cFCnA9lIOmun/6C5c2gvwCnjk5G0fMjy1/7hrZok=
+=4tRo
 -----END PGP SIGNATURE-----
