@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/fvwm-crystal
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/fvwm-crystal/ChangeLog,v 1.62 2011/09/27 13:52:26 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/fvwm-crystal/ChangeLog,v 1.63 2011/11/11 17:07:35 ssuominen Exp $
+
+  11 Nov 2011; Samuli Suominen <ssuominen@gentoo.org>
+  fvwm-crystal-3.0.6-r1.ebuild:
+  amd64/x86 stable wrt #385143
 
   27 Sep 2011; Samuli Suominen <ssuominen@gentoo.org>
   fvwm-crystal-3.0.6-r1.ebuild:
